--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v2.3.4
       - name: Build and test
         uses: ichiro-its/ros2-ci@v0.4.1
+        with:
           ros2-distro: foxy
           apt-packages: git ros-foxy-gazebo-ros libopencv-dev
           pre-build: git clone https://github.com/ichiro-its/shisen /ws/shisen
