--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,18 +1,18 @@
 name: Build and Test
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
   push:
-    branches: [ master ]
+    branches: [ main ]
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checking out
         uses: actions/checkout@v2.3.4
-      - name: Build and test
-        uses: ichiro-its/ros2-ci@v0.4.1
+      - name: Building and testing
+        uses: threeal/ros2-ci@v1.0.0
         with:
           ros2-distro: foxy
-          apt-packages: git ros-foxy-gazebo-ros libopencv-dev
-          pre-build: git clone https://github.com/ichiro-its/shisen /ws/shisen
+          apt-packages: ros-foxy-gazebo-ros libopencv-dev
+          external-repos: ichiro-its/shisen_interfaces#v0.1.0
