--- a/package.xml
+++ b/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>shisen_gazebo_plugins</name>
   <version>0.1.0</version>
-  <description>A Gazebo simulation version of Shisen movement package</description>
+  <description>Gazebo plugins implementation of Shisen camera tools project</description>
   <maintainer email="alfi.maulana.f@gmail.com">Alfi Maulana</maintainer>
   <license>MIT License</license>
   <buildtool_depend>ament_cmake</buildtool_depend>
