--- a/package.xml
+++ b/package.xml
@@ -10,7 +10,7 @@
   <depend>gazebo_dev</depend>
   <depend>gazebo_ros</depend>
   <depend>rclcpp</depend>
-  <depend>shisen_interfaces</depend>
+  <depend>shisen_opencv</depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
   <export>
