fix: add gazebo plugins as a dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(gazebo_dev REQUIRED)
+find_package(gazebo_plugins REQUIRED)
 find_package(gazebo_ros REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(shisen_opencv REQUIRED)
@@ -33,9 +34,7 @@ target_include_directories(shisen_camera_plugin PUBLIC
   $<INSTALL_INTERFACE:include>)
 
 ament_target_dependencies(shisen_camera_plugin
-  OpenCV gazebo_dev gazebo_ros rclcpp shisen_opencv)
-
-target_link_libraries(shisen_camera_plugin CameraPlugin)
+  OpenCV gazebo_dev gazebo_plugins gazebo_ros rclcpp shisen_opencv)
 
 install(TARGETS shisen_camera_plugin
   DESTINATION "share/${PROJECT_NAME}/plugins")
@@ -46,9 +45,9 @@ if(BUILD_TESTING)
 endif()
 
 ament_export_dependencies(
-  OpenCV gazebo_dev gazebo_ros rclcpp shisen_opencv)
+  OpenCV gazebo_dev gazebo_plugins gazebo_ros rclcpp shisen_opencv)
 
 ament_export_include_directories("include")
-ament_export_libraries(${PROJECT_NAME})
+ament_export_libraries(shisen_camera_plugin)
 
 ament_package()
